<resources>
    <string name="app_name">CatalogueMovie2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <string name="appbar_search">Search Movie</string>
    <string name="appbar_upcoming">Up Coming</string>
    <string name="appbar_nowplaying">Now Playing</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="judul_film">Movie Tittle</string>
    <string name="name_bar_detail">Detail Movie</string>
    <string name="overview_film">Overview Movie</string>
    <string name="date_release">Date Release</string>
    <string name="tanggal_rilis">Wednesday, 27 November 2018</string>
    <string name="err_load_failed">Data Not Load</string>
    <string name="masukkan_nama_film">Search ...</string>
    <string name="appbar_favorite">Favorites</string>
    <string name="appwidget_text">Favorite Movies</string>
    <string name="empty_text">No Data</string>
    <string name="pesan_daily">Catalogue movie missing you</string>
    <string name="pref_summary_lang">Select Language</string>
    <string name="pref_lang">Language</string>
    <string name="key_lang">key_lang</string>
    <string name="pref_title_notifications">Notification</string>
    <string name="key_today_reminder">key_today_reminder</string>
    <string name="summary_daily_reminder">You will reveiced daily reminder every 8 AM</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="summary_release_reminder">You will reveiced movie release every 7 AM</string>
    <string name="release_reminder">Release Reminder</string>
</resources>
